# coding-challenges

./: README.md
01.wc-tool/: ccwc.py
02-json_parser/: pyproject.toml
02-json_parser/json_parser/: main.py
02-json_parser/tests/: test_extra.py  test_step1.py  test_step2.py  test_step3.py  test_step4.py
02-json_parser/tests/step4/: valid3.json  valid4.json
parser_json/: README.md  pyproject.toml  run.py
parser_json/parser_json/: lexer.py  main.py  parser.py  test.py  validations.py
parser_json/tests/: test_extra.py  test_step1.py  test_step2.py  test_step3.py  test_step4.py
parser_json/tests/extra/: fail28.json
wctoolv2/: README.md  pyproject.toml
wctoolv2/wctoolv2/: main.py
