[tool.poetry]
name = "parser-json"
version = "0.1.0"
description = "Custom JSON parser"
authors = ["Diego Ramos <diegorramos84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process-json = "run:app"
