[tool.poetry]
name = "wctoolv2"
version = "0.1.0"
description = ""
authors = ["Diego Ramos <diegorramos84@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
wctoolv2 = "wctoolv2.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
